--- a/assets/plugins/bootstrap/bootstrap.css
+++ b/assets/plugins/bootstrap/bootstrap.css
@@ -1986,7 +1986,7 @@ select[multiple].input-lg {
   min-height: 27px;
 }
 .form-horizontal .form-group {
-  margin-right: -15px;
+  /*margin-right: -15px;*/
   margin-left: -15px;
 }
 .form-horizontal .form-control-static {
