--- a/assets/css/customize.css
+++ b/assets/css/customize.css
@@ -155,3 +155,12 @@ body{
 		font-weight: 500 !important;
 	}
 }
+
+.ui-datepicker .ui-datepicker-prev span {
+    background-position: 40% 22%;
+}
+
+.ui-datepicker .ui-datepicker-next span {
+
+    background-position: 13% 22%;
+}
